Updates copy & content for multiple projects
- Major updates to TxtOut, AIGA, Matchstiq, and Oppify
- Minor copy updates to Wayfind, Ignite, ASPS, and Onespark.

--- a/source/assets/stylesheets/components/_nav.sass
+++ b/source/assets/stylesheets/components/_nav.sass
@@ -12,6 +12,8 @@ nav
     z-index: 4000
     &:hover
       color: darken($red, 25%)
+  &.resume
+    max-width: 50%
 .overlay
   +display(flex)
   +justify-content(center)
