--- a/source/assets/stylesheets/pages/_project.sass
+++ b/source/assets/stylesheets/pages/_project.sass
@@ -29,7 +29,7 @@ section.m-project-layout
           +rem(padding-bottom, 0px)
         .item-text
           +span-columns(4)
-          +rem(padding-top, 100px)
+          +rem(padding-top, 50px)
           +rem(padding-right, 40px)
           +tablet
             +span-columns(12)
@@ -74,7 +74,7 @@ section.m-project-layout
               display: inherit
         .item-text
           +span-columns(5)
-          +rem(padding-top, 100px)
+          +rem(padding-top, 50px)
           +rem(padding-left, 40px)
           +tablet
             +span-columns(5)
@@ -133,6 +133,8 @@ section.m-project-layout
         +rem(padding-bottom, 40px)
         .item-text
           +rem(padding-bottom, 40px)
+          margin: 0 auto
+          max-width: 60%
           text-align: center
         .item-image
           +span-columns(6)
