--- a/source/work/asps.html.haml
+++ b/source/work/asps.html.haml
@@ -8,8 +8,9 @@
         %h2 Always Summer Poster Show
         %h5 Typography Poster (18'x24')
         %p
-          Created in 2014 for an upbeat summertime song, Lair, Lair &mdash; by Avicii, this typographic heavy composition depicts somebody overcoming a destructive path; the consequence of being lead astray by someone close. The challenge was to create something that masks a word with a negative connotation, 'Lair', in a vibrant, positive way (that I would want to hang on my wall); just as the song does. You can jam out to the song
-          = link_to 'here!', 'https://www.youtube.com/watch?v=uOsOcopQ4HY', target: '_blank'
+          Created in 2014 for an upbeat summertime song, Lair, Lair &mdash; by Avicii, this typographic heavy composition depicts somebody overcoming a destructive path; the consequence of being lead astray by someone close. The challenge was to create something that masks a word with a negative connotation, 'Lair', in a vibrant, positive way (that I would want to hang on my wall); just as the song does. You can check out the song
+          = link_to 'here', 'https://www.youtube.com/watch?v=uOsOcopQ4HY', target: '_blank'
+          !
         %p Bold colors were used to reflect the mood and context of the song. The sharp angles were drawn from the Artist's logo and help to define the characters of the word.
       .item-image
         = image_tag('work/asps-1.jpg', {:alt => 'Lair'})
