--- a/source/work/onespark.html.haml
+++ b/source/work/onespark.html.haml
@@ -73,4 +73,7 @@
         = image_tag('work/onespark-profile-sketch.jpg', {:alt => 'Sketch Artboards'})
       .item-text
         %h3 Sketch artboards linked with Marvel
-        %p I've found that by having a working prototype of my designs, it allows me to better express my thoughts and ideas to company stakeholders. To present these and other concepts, I used Marvel's Sketch plugin to quickly send my working Sketch III artboards to my online MarvelApp prototype.
+        %p
+          I've found that by having a working prototype of my designs, it allows me to better express my thoughts and ideas to company stakeholders. To present these and other concepts, I used
+          %a{:href => "https://marvelapp.com/", :target => "_blank"}Marvel
+          's Sketch plugin to quickly send my working Sketch III artboards to my online MarvelApp prototype.
