--- a/source/work/oppify.html.haml
+++ b/source/work/oppify.html.haml
@@ -6,8 +6,11 @@
     %article.intro
       .item-text
         %h2 Oppify
-        %h5 Personal Job Search Advocate
-        %p Text needed here.
+        %h5 Your Personal Job Search Advocate
+        %p
+          Oppify attempted to close the communication gap between recruiters and candidates. Empowering candidates with the visibility to browse, search, and apply for available
+          %a{:href => "http://www.adecco.com/", :target => "_blank"}Adecco
+          positions; All while feeling engaged by curated content and coaching from our recruiting and hiring experts. The ultimate goal was to transform their careers.
         %cite
           %ul
             %li
@@ -58,8 +61,12 @@
         .oppify-five.hide
           = image_tag('work/oppify-email.jpg', {:alt => 'Email Template Screen'})
       .item-text
-        %h3 Messaging
-        %p Text needed here.
+        %h3 In-App Screens
+        %p
+          This was my first project and team I was assigned to at
+          %a{:href => "http://www.ignitewithus.com/", :target => "_blank"}Ignite
+          &period; I was brought in to assist in the front-end development, as the project suffered from a lot of technical debt. My plan of attack was to setup a UI controller where I would simply rebuild the pages optimally; in my own, less logic heavy, environment.
+        %p After cleaning up most of the debt, I was able to switch gears and assist in the creation of new features; such as, the job board and messaging.
         %select.div-toggler{'data-target' => '.oppify-toggle'}
           %option{'data-show' => '.oppify-one', :value => 'oppify-one'} Marketing
           %option{'data-show' => '.oppify-two', :value => 'oppify-two'}  Sign In
@@ -67,8 +74,18 @@
           %option{'data-show' => '.oppify-four', :value => 'oppify-four'}  Messaging
           %option{'data-show' => '.oppify-five', :value => 'oppify-five'}  Email Template
     %article.image
-      .item-image
-        = image_tag('work/oppify-meetup.jpg', {:alt => 'Oppify Meetup Flyer'})
+      .item-image.oppify-toggle-2
+        .oppify-six
+          = image_tag('work/oppify-meetup.jpg', {:alt => 'Oppify Meetup Flyer'})
+        .oppify-seven.hide
+          = image_tag("work/oppify-recruiter-do's-don'ts-front.jpg", {:alt => "Oppify Recruiter Do's and Don'ts Front Page"})
+        .oppify-eight.hide
+          = image_tag("work/oppify-recruiter-do's-don'ts-back.jpg", {:alt => "Oppify Recruiter Do's and Don'ts Back Page"})
       .item-text
-        %h3 Meetup Flyer
-        %p Text needed here.
+        %h3 Print-outs
+        %p There came times where I was able work on printable items, such as, this branded flyer that promoted a networking event we hosted to speak directly with our constituents. We hung them in co-working spaces and outside offices around downtown.
+        %p Other tasks included simple, self-printable resources the recruiting offices could print out on their own and share.
+        %select.div-toggler{'data-target' => '.oppify-toggle-2'}
+          %option{'data-show' => '.oppify-six', :value => 'oppify-six', :selected => 'selected'} Meetup Flyer
+          %option{'data-show' => '.oppify-seven', :value => 'oppify-seven'}  Recruiter Do's and Don'ts (Front Page)
+          %option{'data-show' => '.oppify-eight', :value => 'oppify-eight'}  Recruiter Do's and Don'ts (Back Page)
