--- a/source/work/wayfind.html.haml
+++ b/source/work/wayfind.html.haml
@@ -245,4 +245,7 @@
         = image_tag('work/wayfind-invision.gif', {:alt => 'InVision Prototype'})
       .item-text
         %h3 InVision Prototype
-        %p The team used InVision as common ground where we could review concepts and host discussions about the product efficiently. Linking my Sketch artboards directly to the project, I was able to quickly share revisions with the team (plus it let everyone always have my most recent version).
+        %p
+          The team used
+          %a{:href => "https://www.invisionapp.com/", :target => "_blank"}InVision
+          as common ground where we could review concepts and host discussions about the product efficiently. Linking my Sketch artboards directly to the project, I was able to quickly share revisions with the team (plus it let everyone always have my most recent version).
