--- a/source/work/matchstiq.html.haml
+++ b/source/work/matchstiq.html.haml
@@ -7,7 +7,8 @@
       .item-text
         %h2 Matchstiq
         %h5 Vendor Management System
-        %p Matchstiq is a simple online tool with collaborative job order management, comprehensive analytics and in-app activity tracking for both hiring managers and recruiters.
+        %p The problem: Both clients and recruiters need a data-driven, digital solution for job order fulfillment that is quick and easy to use.
+        %p The solution: Matchstiq is a simple online tool with collaborative job order management, comprehensive analytics and in-app activity tracking for both hiring managers and recruiters.
         %cite
           %ul
             %li
@@ -59,11 +60,106 @@
           .mob
             = image_tag('work/ms-resources-mobile.jpg', {:alt => 'Resources Screen'})
       .item-text
-        %h3 In App Screens
-        -# %p Text
+        %h3 In-App Screens
+        %p When I joined the Matchstiq team, there was already a v1 out in the world. I was brought on to help with the next version, as the team was making pivotes in the product. My first tasks were to update the landing, authentication, and resources pages.
+        %p We then move onto the interior. Starting with a custom dashboard giving recruiters an overview of information, in an easily digestable format.
         %select.div-toggler{'data-target' => '.matchstiq-toggle'}
-          %option{'data-show' => '.matchstiq-one', :value => 'matchstiq-one'} Login
-          %option{'data-show' => '.matchstiq-two', :value => 'matchstiq-two'}  Splash Screens
+          %option{'data-show' => '.matchstiq-one', :value => 'matchstiq-one'} Landing
+          %option{'data-show' => '.matchstiq-two', :value => 'matchstiq-two'}  Login
           %option{'data-show' => '.matchstiq-three', :value => 'matchstiq-three', :selected => 'selected'}  Dashboard
           %option{'data-show' => '.matchstiq-four', :value => 'matchstiq-four'}  Modals
           %option{'data-show' => '.matchstiq-five', :value => 'matchstiq-five'}  Resources
+    %article.image
+      .item-image.toggle-view
+        = image_tag('work/matchstiq-iv-wireframe-prototype.jpg', {:alt => 'Matchstiq Wireframe Prototype'})
+      .item-text
+        %h3 Wireframe Prototype
+        %p
+          We partnered up with
+          %a{:href => "http://www.soliant.com/", :target => "_blank"}Soliant Health
+          to run a 3 month initiative to see if we could use the power behind Matchstiq to create a better system for hiring and managing contract nurse positions and applicants.
+        %p We created an application workflow which provides recruiters incentives to provide quality and timely applicants, through a tiered point system.
+        %p
+          Our walkaway delieverable was a wireframe mockup using
+          %a{:href => "https://balsamiq.com/", :target => "_blank"}Balsamiq
+          then uploading to
+          %a{:href => "https://www.invisionapp.com/", :target => "_blank"}InVision
+          to create a clickable prototype to share back with the Soliant stakeholders.
+    %article.image
+      .item-image.matchstiq-toggle-2
+        .matchstiq-six.hide
+          = image_tag('work/matchstiq-intro-front.jpg', {:alt => 'One-Pager (Front)'})
+        .matchstiq-seven.hide
+          = image_tag('work/matchstiq-intro-back.jpg', {:alt => 'Intro One-Pager (Back)'})
+        .matchstiq-eight.hide
+          = image_tag('work/matchstiq-sales-back.jpg', {:alt => 'Sales One-Pager (Back)'})
+        .matchstiq-nine.hide
+          = image_tag('work/matchstiq-quickstart-hm.jpg', {:alt => 'Quickstart Guide: Hiring Managers Page 1'})
+        .matchstiq-ten.hide
+          = image_tag('work/matchstiq-quickstart-hm-2.jpg', {:alt => 'Quickstart Guide: Hiring Managers Page 2'})
+        .matchstiq-eleven.hide
+          = image_tag('work/matchstiq-quickstart-hm-3.jpg', {:alt => 'Quickstart Guide: Hiring Managers Page 3'})
+        .matchstiq-twelve.hide
+          = image_tag('work/matchstiq-quickstart-hm-4.jpg', {:alt => 'Quickstart Guide: Hiring Managers Page 4'})
+        .matchstiq-thirteen.hide
+          = image_tag('work/matchstiq-quickstart-hm-5.jpg', {:alt => 'Quickstart Guide: Hiring Managers Page 5'})
+        .matchstiq-fourteen.hide
+          = image_tag('work/matchstiq-quickstart-hm-6.jpg', {:alt => 'Quickstart Guide: Hiring Managers Page 6'})
+        .matchstiq-fifteen.hide
+          = image_tag('work/matchstiq-quickstart-hm-7.jpg', {:alt => 'Quickstart Guide: Hiring Managers Page 7'})
+        .matchstiq-sixteen.hide
+          = image_tag('work/matchstiq-quickstart-hm-8.jpg', {:alt => 'Quickstart Guide: Hiring Managers Page 8'})
+        .matchstiq-seventeen.hide
+          = image_tag('work/matchstiq-quickstart-hm-9.jpg', {:alt => 'Quickstart Guide: Hiring Managers Page 9'})
+        .matchstiq-eighteen.hide
+          = image_tag('work/matchstiq-quickstart-hm-10.jpg', {:alt => 'Quickstart Guide: Hiring Managers Page 10'})
+        .matchstiq-nineteen.hide
+          = image_tag('work/matchstiq-quickstart-rx.jpg', {:alt => 'Quickstart Guide: Recruiters Page 1'})
+        .matchstiq-twenty.hide
+          = image_tag('work/matchstiq-quickstart-rx-2.jpg', {:alt => 'Quickstart Guide: Recruiters Page 2'})
+        .matchstiq-twentyone.hide
+          = image_tag('work/matchstiq-quickstart-rx-3.jpg', {:alt => 'Quickstart Guide: Recruiters Page 3'})
+        .matchstiq-twentytwo.hide
+          = image_tag('work/matchstiq-quickstart-rx-4.jpg', {:alt => 'Quickstart Guide: Recruiters Page 4'})
+        .matchstiq-twentythree.hide
+          = image_tag('work/matchstiq-quickstart-rx-5.jpg', {:alt => 'Quickstart Guide: Recruiters Page 5'})
+        .matchstiq-twentyfour.hide
+          = image_tag('work/matchstiq-quickstart-rx-6.jpg', {:alt => 'Quickstart Guide: Recruiters Page 6'})
+        .matchstiq-twentyfive.hide
+          = image_tag('work/matchstiq-quickstart-rx-7.jpg', {:alt => 'Quickstart Guide: Recruiters Page 7'})
+        .matchstiq-twentysix.hide
+          = image_tag('work/matchstiq-quickstart-rx-8.jpg', {:alt => 'Quickstart Guide: Recruiters Page 8'})
+        .matchstiq-twentyseven.hide
+          = image_tag('work/matchstiq-quickstart-rx-9.jpg', {:alt => 'Quickstart Guide: Recruiters Page 9'})
+        .matchstiq-twentyeight.hide
+          = image_tag('work/matchstiq-quickstart-rx-10.jpg', {:alt => 'Quickstart Guide: Recruiters Page 10'})
+        .matchstiq-twentynine
+          = image_tag('work/matchstiq-presentation.gif', {:alt => 'Matchstiq Branded Presentation'})
+      .item-text
+        %h3 Support Materials
+        %p Along with the web app, we created quickly consumable, support materials to provide internal stakeholers and sales teams; including: FAQ's, Guides, and Presentations.
+        %select.div-toggler{'data-target' => '.matchstiq-toggle-2'}
+          %option{'data-show' => '.matchstiq-six', :value => 'matchstiq-six'} One-Pager (Front)
+          %option{'data-show' => '.matchstiq-seven', :value => 'matchstiq-seven'}  Intro One-Pager (Back)
+          %option{'data-show' => '.matchstiq-eight', :value => 'matchstiq-eight'}  Sales One-Pager (Back)
+          %option{'data-show' => '.matchstiq-nine', :value => 'matchstiq-nine'}  Quickstart Guide: Hiring Managers Page 1
+          %option{'data-show' => '.matchstiq-ten', :value => 'matchstiq-ten'}  Quickstart Guide: Hiring Managers Page 2
+          %option{'data-show' => '.matchstiq-eleven', :value => 'matchstiq-eleven'}  Quickstart Guide: Hiring Managers Page 3
+          %option{'data-show' => '.matchstiq-twelve', :value => 'matchstiq-twelve'}  Quickstart Guide: Hiring Managers Page 4
+          %option{'data-show' => '.matchstiq-thirteen', :value => 'matchstiq-thirteen'}  Quickstart Guide: Hiring Managers Page 5
+          %option{'data-show' => '.matchstiq-fourteen', :value => 'matchstiq-fourteen'}  Quickstart Guide: Hiring Managers Page 6
+          %option{'data-show' => '.matchstiq-fifteen', :value => 'matchstiq-fifteen'}  Quickstart Guide: Hiring Managers Page 7
+          %option{'data-show' => '.matchstiq-sixteen', :value => 'matchstiq-sixteen'}  Quickstart Guide: Hiring Managers Page 8
+          %option{'data-show' => '.matchstiq-seventeen', :value => 'matchstiq-seventeen'}  Quickstart Guide: Hiring Managers Page 9
+          %option{'data-show' => '.matchstiq-eighteen', :value => 'matchstiq-eighteen'}  Quickstart Guide: Hiring Managers Page 10
+          %option{'data-show' => '.matchstiq-nineteen', :value => 'matchstiq-nineteen'}  Quickstart Guide: Recruiters Page 1
+          %option{'data-show' => '.matchstiq-twenty', :value => 'matchstiq-twenty'}  Quickstart Guide: Recruiters Page 2
+          %option{'data-show' => '.matchstiq-twentyone', :value => 'matchstiq-twentyone'}  Quickstart Guide: Recruiters Page 3
+          %option{'data-show' => '.matchstiq-twentytwo', :value => 'matchstiq-twentytwo'}  Quickstart Guide: Recruiters Page 4
+          %option{'data-show' => '.matchstiq-twentythree', :value => 'matchstiq-twentythree'}  Quickstart Guide: Recruiters Page 5
+          %option{'data-show' => '.matchstiq-twentyfour', :value => 'matchstiq-twentyfour'}  Quickstart Guide: Recruiters Page 6
+          %option{'data-show' => '.matchstiq-twentyfive', :value => 'matchstiq-twentyfive'}  Quickstart Guide: Recruiters Page 7
+          %option{'data-show' => '.matchstiq-twentysix', :value => 'matchstiq-twentysix'}  Quickstart Guide: Recruiters Page 8
+          %option{'data-show' => '.matchstiq-twentyseven', :value => 'matchstiq-twentyseven'}  Quickstart Guide: Recruiters Page 9
+          %option{'data-show' => '.matchstiq-twentyeight', :value => 'matchstiq-twentyeight'}  Quickstart Guide: Recruiters Page 10
+          %option{'data-show' => '.matchstiq-twentynine', :value => 'matchstiq-twentynine', :selected => 'selected'}  Matchstiq Branded Presentation
