--- a/source/work/txtout.html.haml
+++ b/source/work/txtout.html.haml
@@ -56,7 +56,13 @@
           .mob
             = image_tag('work/txtout-forgotpw-mobile.jpg', {:alt => 'Forgot Password Screen'})
       .item-text
-        %h3 Admin Dashboard
+        %h3 In-App Screens
+        %p Upon returning from the end of the year holidays, I was apart of a team that was formed to create TxtOut. It was a fast-pace, 3 month initiative with the goal of creating an interface for a well-preforming, quickly hacked together system.
+        %p The interface consisted of a general dashboard which displayed call-outs for individual branches, along with authentication and admin pages.
+        %p
+          This project continued on to become one of
+          %a{:href => "http://www.ignitewithus.com/", :target => "_blank"}Ignite
+          's most successful tools, later receiving a larger budget and timeframe to add additional features.
         %select.div-toggler{'data-target' => '.txtout-toggle'}
           %option{'data-show' => '.txtout-one', :value => 'txtout-one'} Dashboard
           %option{'data-show' => '.txtout-two', :value => 'txtout-two'} Admin
