--- a/source/work/bistro23.html.haml
+++ b/source/work/bistro23.html.haml
@@ -7,7 +7,7 @@
       .item-text
         %h2 Bistro23
         %h5 American Style Bistro (Student Project)
-        %p Bistro 23 is a fine-dining restaurant with an american cuisine menu. Located within the center of the screen are the menu options providing fragment identifer links to other sections of this one-page site, as well as the contrasting logo for brand recognition.
+        %p Bistro 23 is a fine-dining restaurant with an american cuisine menu. Located within the center of the screen are the menu options providing fragment identifier links to other sections of this one-page site, as well as the contrasting logo for brand recognition.
       .item-image
         = image_tag('work/bistro23-devices.png', {:alt => 'Bistro23 Devices'})
     %article.image
