--- a/source/work/browndog.html.haml
+++ b/source/work/browndog.html.haml
@@ -21,7 +21,7 @@
         = image_tag('work/medcom-1.jpg', {:alt => 'Medcome Homepage Screen'})
       .item-text
         %h3 Medcom Homepage
-        %p Medcom had similar website problems, where they wanted to move way from their current site which was heavy in text and running flash. The goals for this project were to better incorporate the business’s colors, reorganize the content and structure of the website, and increase the overall attractability of the website.
+        %p Medcom had similar website problems, where they wanted to move away from their current site which was heavy in text and running flash. The goals for this project were to better incorporate the business’s colors, reorganize the content and structure of the website, and increase the overall attractability of the website.
     %article.image
       .item-image
         = image_tag('work/medcom-2.jpg', {:alt => 'Medcom Interior Screen'})
