--- a/source/work/ignite.html.haml
+++ b/source/work/ignite.html.haml
@@ -84,7 +84,7 @@
       .item-text
         %h3 2015 Marketing Site
         %p In just two years from Ignite's launch, we outgrew the capabilities that our previous one-page marketing website could provide. With a goal of raising brand awareness and increasing product adoption rate, we aimed to make more of our information and resources available online.
-        %p Since this wasn't one of the organization's prioritied products, our entire design team collaborated to meet the project deadlines. My role on the team was to build a great codebase that any of us could use and expand upon.
+        %p Since this wasn't one of the organization's prioritized products, our entire design team collaborated to meet the project deadlines. My role on the team was to build a great codebase that any of us could use and expand upon.
         %select.div-toggler{'data-target' => '.ignite-toggle'}
           %option{'data-show' => '.ignite-one', :value => 'ignite-one'} Homepage
           %option{'data-show' => '.ignite-two', :value => 'ignite-two'} Selfies
