--- a/source/work/metrology.html.haml
+++ b/source/work/metrology.html.haml
@@ -39,7 +39,7 @@
         = image_tag('work/metrology-5.png', {:alt => 'Result Screen'})
       .item-text
         %h3 Result
-        %p Based on the path created by the user, the application interpretes the photo and calculates the degree of the angle.
+        %p Based on the path created by the user, the application interprets the photo and calculates the degree of the angle.
     %article.phone
       .item-image
         = image_tag('work/metrology-6.png', {:alt => 'Pop&amp;out Menu Screen'})
