--- a/source/work/spinnaker.html.haml
+++ b/source/work/spinnaker.html.haml
@@ -22,4 +22,4 @@
         = image_tag('work/spinnaker-radio.jpg', {:alt => 'Radio Department Screen'})
       .item-text
         %h3 Radio Page
-        %p Nested within the main site sits the radio page. The overall format stays consistant to the layout from the homepage, except now the stories are content created by the station. The radio player also takes up a larger portion above the fold, providing information about the previously played songs.
+        %p Nested within the main site sits the radio page. The overall format stays consistent to the layout from the homepage, except now the stories are content created by the station. The radio player also takes up a larger portion above the fold, providing information about the previously played songs.
