--- a/source/work/traverse.html.haml
+++ b/source/work/traverse.html.haml
@@ -39,10 +39,10 @@
         = image_tag('work/traverse-5.png', {:alt => 'Feature Interior Page'})
       .item-text
         %h3 Feature Interior
-        %p The top of this page includes an image to keep the users attention, while guiding the user to the beginning of the story.
+        %p The top of this page includes an image to keep the user's attention, while guiding the user to the beginning of the story.
     %article.tablet
       .item-image
         = image_tag('work/traverse-6.png', {:alt => "Next Month's Cover"})
       .item-text
         %h3 Next Month's Cover
-        %p Another example of a cover. It is important that the focus of the photos isn't in the center of the page since that is where the logo will always rest. It also helps if the image can guide the users eye to the center.
+        %p Another example of a cover. It is important that the focus of the photos isn't in the center of the page since that is where the logo will always rest. It also helps if the image can guide the user's eye to the center.
