--- a/source/work/wayfind.html.haml
+++ b/source/work/wayfind.html.haml
@@ -156,7 +156,7 @@
       .item-text
         %h3 In-App Screens
         %p Users can search for roles through one of our recommended channels, browse through categories, or search for something more specific. As they're browsing, they can save multiple roles that catch their interest to act upon at a later time.
-        %p Once they find a desired role, they can create a plan. This feature helps them choose a personalited career path leading them to their desired role, gaining the skills and experience they need along the way.
+        %p Once they find a desired role, they can create a plan. This feature helps them choose a personalized career path leading them to their desired role, gaining the skills and experience they need along the way.
         %p Profile pages are alternative versions of the onboarding questions, allowing users to re-adjust their profile to increase the accuracy of our recommendations.
         %select.div-toggler{'data-target' => '.wayfind-toggle-2'}
           %option{'data-show' => '.wayfind-eight', :value => 'wayfind-eight'} Login
@@ -231,7 +231,7 @@
         %p
           Email invites are sent out by a company's HR department, where users are directed to a brief
           %a{:href => "https://en.wikipedia.org/wiki/Myers%E2%80%93Briggs_Type_Indicator", :target => "_blank"}Myers–Briggs
-          style questionare. Here we gathered the minimun amount of information we felt that was needed for our alorgithum to help employees find their dream job. What you see to the left are the results of outcomes we learned from our user interview sessions.
+          style questionnaire. Here we gathered the minimum amount of information we felt that was needed for our algorithm to help employees find their dream job. What you see to the left are the results of outcomes we learned from our user interview sessions.
         %select.div-toggler{'data-target' => '.wayfind-toggle'}
           %option{'data-show' => '.wayfind-one', :value => 'wayfind-one'} Onboarding Intro
           %option{'data-show' => '.wayfind-two', :value => 'wayfind-two'} Onboarding Personality
