--- a/source/work/matchstiq.html.haml
+++ b/source/work/matchstiq.html.haml
@@ -61,8 +61,8 @@
             = image_tag('work/ms-resources-mobile.jpg', {:alt => 'Resources Screen'})
       .item-text
         %h3 In-App Screens
-        %p When I joined the Matchstiq team, there was already a v1 out in the world. I was brought on to help with the next version, as the team was making pivotes in the product. My first tasks were to update the landing, authentication, and resources pages.
-        %p We then move onto the interior. Starting with a custom dashboard giving recruiters an overview of information, in an easily digestable format.
+        %p When I joined the Matchstiq team, there was already a v1 out in the world. I was brought on to help with the next version, as the team was making pivots&amp; in the product. My first tasks were to update the landing, authentication, and resources pages.
+        %p We then move onto the interior. Starting with a custom dashboard giving recruiters an overview of information, in an easily digestible format.
         %select.div-toggler{'data-target' => '.matchstiq-toggle'}
           %option{'data-show' => '.matchstiq-one', :value => 'matchstiq-one'} Landing
           %option{'data-show' => '.matchstiq-two', :value => 'matchstiq-two'}  Login
@@ -80,7 +80,7 @@
           to run a 3 month initiative to see if we could use the power behind Matchstiq to create a better system for hiring and managing contract nurse positions and applicants.
         %p We created an application workflow which provides recruiters incentives to provide quality and timely applicants, through a tiered point system.
         %p
-          Our walkaway delieverable was a wireframe mockup using
+          Our walkaway deliverable was a wireframe mockup using
           %a{:href => "https://balsamiq.com/", :target => "_blank"}Balsamiq
           then uploading to
           %a{:href => "https://www.invisionapp.com/", :target => "_blank"}InVision
@@ -137,7 +137,7 @@
           = image_tag('work/matchstiq-presentation.gif', {:alt => 'Matchstiq Branded Presentation'})
       .item-text
         %h3 Support Materials
-        %p Along with the web app, we created quickly consumable, support materials to provide internal stakeholers and sales teams; including: FAQ's, Guides, and Presentations.
+        %p Along with the web app, we created quickly consumable, support materials to provide internal stakeholders and sales teams; including: FAQ's, Guides, and Presentations.
         %select.div-toggler{'data-target' => '.matchstiq-toggle-2'}
           %option{'data-show' => '.matchstiq-six', :value => 'matchstiq-six'} One-Pager (Front)
           %option{'data-show' => '.matchstiq-seven', :value => 'matchstiq-seven'}  Intro One-Pager (Back)
