--- a/source/work/onespark.html.haml
+++ b/source/work/onespark.html.haml
@@ -76,4 +76,4 @@
         %p
           I've found that by having a working prototype of my designs, it allows me to better express my thoughts and ideas to company stakeholders. To present these and other concepts, I used
           %a{:href => "https://marvelapp.com/", :target => "_blank"}Marvel
-          's Sketch plugin to quickly send my working Sketch III artboards to my online MarvelApp prototype.
+          's Sketch plugin to quickly send my working Sketch III artboards to my online prototype.
