--- a/source/work/txtout.html.haml
+++ b/source/work/txtout.html.haml
@@ -57,7 +57,7 @@
             = image_tag('work/txtout-forgotpw-mobile.jpg', {:alt => 'Forgot Password Screen'})
       .item-text
         %h3 In-App Screens
-        %p Upon returning from the end of the year holidays, I was apart of a team that was formed to create TxtOut. It was a fast-pace, 3 month initiative with the goal of creating an interface for a well-preforming, quickly hacked together system.
+        %p Upon returning from the end of the year holidays, I was apart of a team that was formed to create TxtOut. It was a fast-pace, 3 month initiative with the goal of creating an interface for a well-performing, quickly hacked together system.
         %p The interface consisted of a general dashboard which displayed call-outs for individual branches, along with authentication and admin pages.
         %p
           This project continued on to become one of
